# c-hid-interface

./: .gitmodules  CMakeLists.txt  bake
src/_init/: main.c
